--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "nodemailer": "^4.6.4",
-    "request": "^2.85.0"
+    "npm": "^6.0.1",
+    "request": "^2.86.0"
   }
 }
